<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.i5.boards.ui.board.BoardActivity"
    tools:showIn="@layout/fragment_board">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/headerLabels">

        <TextView
            android:text="@string/first_column_label"
            android:id="@+id/toDoColumnLabel"
            style="@style/columnLabel" />

        <TextView
            android:text="@string/second_column_label"
            android:id="@+id/progressColumnLabel"
            style="@style/columnLabel" />

        <TextView
            android:text="@string/third_column_label"
            android:id="@+id/doneColumnLabel"
            style="@style/columnLabel" />

    </LinearLayout>

    <include
        layout="@layout/story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headerLabels" />
    <!-- Added width and height because layout_below wouldn't work without them -->
<!--TODO return ListView with more stories-->
    <!--<ListView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/boardItems"-->
        <!--android:layout_below="@+id/headerLabels"/>-->

</RelativeLayout>
